seo: Add Google Search Console verification code

--- a/client/index.html
+++ b/client/index.html
@@ -14,8 +14,8 @@
     gtag('config', 'G-XXXXXXXXXX');
   </script>
 
-  <!-- Google Search Console Verification (Replace YOUR_VERIFICATION_CODE with actual code from GSC) -->
-  <meta name="google-site-verification" content="YOUR_GOOGLE_VERIFICATION_CODE" />
+  <!-- Google Search Console Verification -->
+  <meta name="google-site-verification" content="KidvqQF6Q24c9M5YGXbVGG0BxU-j09mMCKtYLnMrZWE" />
 
   <!-- Bing Webmaster Verification (Replace YOUR_BING_CODE with actual code) -->
   <meta name="msvalidate.01" content="YOUR_BING_VERIFICATION_CODE" />
