--- a/client/index.html
+++ b/client/index.html
@@ -66,15 +66,17 @@
   <meta name="theme-color" content="#0ea5e9" />
   <meta name="msapplication-TileColor" content="#0ea5e9" />
 
-  <!-- Security Headers -->
+  <!-- Security Headers (Note: X-Frame-Options set via HTTP header by server) -->
   <meta http-equiv="X-Content-Type-Options" content="nosniff" />
-  <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" />
   <meta name="referrer" content="strict-origin-when-cross-origin" />
 
   <!-- Preconnect for performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://www.googletagmanager.com" />
+  <link rel="preconnect" href="https://www.google-analytics.com" />
   <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+  <link rel="dns-prefetch" href="https://www.googletagmanager.com" />
 
   <!-- Fonts (optimized - only essential weights) -->
   <link
