--- a/client/index.html
+++ b/client/index.html
@@ -5,13 +5,31 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5" />
 
-  <!-- Google Analytics 4 (Replace G-XXXXXXXXXX with your actual Measurement ID from analytics.google.com) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <!-- Google Analytics 4 - Deferred loading for better performance -->
+  <!-- Replace G-XXXXXXXXXX with your actual Measurement ID from analytics.google.com -->
   <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX');
+    // Load GA4 after the page is interactive to improve Core Web Vitals
+    function loadGA() {
+      var script = document.createElement('script');
+      script.src = 'https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX';
+      script.async = true;
+      document.head.appendChild(script);
+
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      window.gtag = gtag;
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX');
+    }
+
+    // Load after page is interactive
+    if (typeof requestIdleCallback !== 'undefined') {
+      requestIdleCallback(loadGA);
+    } else {
+      window.addEventListener('load', function () {
+        setTimeout(loadGA, 100);
+      });
+    }
   </script>
 
   <!-- Google Search Console Verification -->
@@ -78,10 +96,18 @@
   <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
   <link rel="dns-prefetch" href="https://www.googletagmanager.com" />
 
-  <!-- Fonts (optimized - only essential weights) -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
-    rel="stylesheet" />
+  <!-- Fonts - optimized loading to prevent render blocking -->
+  <!-- Preload the most critical font weight for LCP -->
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" />
+
+  <!-- Load fonts asynchronously using media="print" trick -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"
+    media="print" onload="this.media='all'" />
+
+  <!-- Fallback for no-JS -->
+  <noscript>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  </noscript>
 
   <!-- Structured Data - Organization -->
   <script type="application/ld+json">
